K8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /backend
        backend:
          serviceName: backend-service
          servicePort: 4000
      - path: /admin
        backend:
          serviceName: adminer-service
          servicePort: 8080
